--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1,17 +1,91 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bb55437",
+   "cell_type": "markdown",
+   "id": "b9cb6142",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 1. Business Understanding\n",
+    "\n",
+    "### Business Problem\n",
+    "SyriaTel, a leading telecommunications provider, is facing significant revenue loss due to customer churn — the phenomenon where customers discontinue their services. In the highly competitive telecom sector, acquiring new customers is costly, making customer retention a top strategic priority.  \n",
+    "\n",
+    "Reducing churn requires a clear understanding of the factors that influence customer behavior and the ability to anticipate churn before it happens.\n",
+    "\n",
+    "### Project Objective\n",
+    "The goal of this project is to build a predictive machine learning model that classifies whether a customer is likely to churn. By leveraging customer demographic and usage data, the model will empower SyriaTel to:\n",
+    "- Identify at-risk customers\n",
+    "- Implement targeted retention strategies\n",
+    "- Optimize marketing efforts\n",
+    "- Reduce overall churn rates\n",
+    "\n",
+    "### Stakeholders\n",
+    "- **Customer Retention & Loyalty Team** — Responsible for designing and executing churn reduction programs.\n",
+    "- **Marketing Strategy Team** — Focused on customer engagement and acquisition strategies.\n",
+    "- **Senior Management** — Interested in high-level insights for strategic planning and revenue assurance.\n",
+    "\n",
+    "### Key Business Questions\n",
+    "- What customer attributes and behaviors are strong indicators of churn?\n",
+    "- How accurately can churn be predicted before it occurs?\n",
+    "- What actionable insights can SyriaTel apply to minimize customer attrition?\n",
+    "\n",
+    "## 2. Data Understanding\n",
+    "\n",
+    "## Dataset Overview  \n",
+    "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
+    "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
+    "\n",
+    "## Data Source  \n",
+    "- **Dataset Name:** SyriaTel Customer Churn  \n",
+    "- **Target Variable:** `Churn` (Binary — Yes/No)  \n",
+    "- **Data Type:** Tabular (CSV)  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Importing Libraries and Loading Data\n",
+    "```python\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Settings for better display\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "sns.set(style='whitegrid')\n",
+    "\n",
+    "# Load dataset\n",
+    "data = pd.read_csv('data/SyriaTel_Customer_Churn.csv')\n",
+    "\n",
+    "# Display first few records\n",
+    "data.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17b15704",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
