--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -59,6 +59,26 @@
     "\n",
     "# Display first few records\n",
     "data.head()\n",
+    "\n",
+    "\n",
+    "# 3️⃣ Data Preparation\n",
+    "\n",
+    "### Actions Taken:\n",
+    "- Dropped missing values\n",
+    "- Checked duplicates\n",
+    "- Reset index after cleaning\n",
+    "\n",
+    "# Drop missing values\n",
+    "df_clean = df.dropna()\n",
+    "\n",
+    "# Check for duplicates\n",
+    "duplicates = df_clean.duplicated().sum()\n",
+    "\n",
+    "# Drop duplicates if any\n",
+    "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\")\n",
+    "\n",
     "\n"
    ]
   },
