--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -5,81 +5,75 @@
    "id": "b9cb6142",
    "metadata": {},
    "source": [
-    "## 1. Business Understanding\n",
+    "# 1. Business Understanding\n",
     "\n",
-    "### Business Problem\n",
-    "SyriaTel, a leading telecommunications provider, is facing significant revenue loss due to customer churn — the phenomenon where customers discontinue their services. In the highly competitive telecom sector, acquiring new customers is costly, making customer retention a top strategic priority.  \n",
+    "## 1.1 Background\n",
     "\n",
-    "Reducing churn requires a clear understanding of the factors that influence customer behavior and the ability to anticipate churn before it happens.\n",
+    "SyriaTel is one of the largest telecommunications providers in Syria, offering mobile services to a broad range of customers.  \n",
+    "In the highly competitive telecom industry, retaining existing customers is critical for sustaining profitability and market share.  \n",
     "\n",
-    "### Project Objective\n",
-    "The goal of this project is to build a predictive machine learning model that classifies whether a customer is likely to churn. By leveraging customer demographic and usage data, the model will empower SyriaTel to:\n",
-    "- Identify at-risk customers\n",
-    "- Implement targeted retention strategies\n",
-    "- Optimize marketing efforts\n",
-    "- Reduce overall churn rates\n",
-    "\n",
-    "### Stakeholders\n",
-    "- **Customer Retention & Loyalty Team** — Responsible for designing and executing churn reduction programs.\n",
-    "- **Marketing Strategy Team** — Focused on customer engagement and acquisition strategies.\n",
-    "- **Senior Management** — Interested in high-level insights for strategic planning and revenue assurance.\n",
-    "\n",
-    "### Key Business Questions\n",
-    "- What customer attributes and behaviors are strong indicators of churn?\n",
-    "- How accurately can churn be predicted before it occurs?\n",
-    "- What actionable insights can SyriaTel apply to minimize customer attrition?\n",
-    "\n",
-    "## 2. Data Understanding\n",
-    "\n",
-    "## Dataset Overview  \n",
-    "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
-    "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
-    "\n",
-    "## Data Source  \n",
-    "- **Dataset Name:** SyriaTel Customer Churn  \n",
-    "- **Target Variable:** `Churn` (Binary — Yes/No)  \n",
-    "- **Data Type:** Tabular (CSV)  \n",
+    "However, customer churn — when subscribers discontinue using SyriaTel’s services — poses a significant business challenge.  \n",
+    "Losing customers not only decreases revenue but also increases costs due to the need for acquiring new customers through marketing and promotional efforts.\n",
     "\n",
     "---\n",
     "\n",
-    "# Importing Libraries and Loading Data\n",
-    "```python\n",
-    "# Import libraries\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "## 1.2 Business Objective\n",
     "\n",
-    "# Settings for better display\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "sns.set(style='whitegrid')\n",
+    "The key objective of this project is to develop a **predictive model** that accurately identifies customers likely to churn.  \n",
+    "With such a model, SyriaTel will be able to:\n",
     "\n",
-    "# Load dataset\n",
-    "data = pd.read_csv('data/SyriaTel_Customer_Churn.csv')\n",
+    "- Take **proactive retention measures** for high-risk customers  \n",
+    "- Design **targeted marketing campaigns**  \n",
+    "- Improve **customer satisfaction** by addressing key pain points  \n",
     "\n",
-    "# Display first few records\n",
-    "data.head()\n",
+    "Ultimately, this will help **reduce churn rates**, save on customer acquisition costs, and maximize long-term profitability.\n",
     "\n",
+    "---\n",
     "\n",
-    "# 3️⃣ Data Preparation\n",
+    "## 1.3 Stakeholders\n",
     "\n",
-    "### Actions Taken:\n",
-    "- Dropped missing values\n",
-    "- Checked duplicates\n",
-    "- Reset index after cleaning\n",
+    "| Stakeholder | Interest |\n",
+    "|---|---|\n",
+    "| **Executive Management** | Strategic decisions on customer retention initiatives |\n",
+    "| **Marketing Team** | Design targeted offers and promotions |\n",
+    "| **Customer Service** | Improve customer engagement and support |\n",
+    "| **Data Science Team** | Develop and deploy predictive churn models |\n",
     "\n",
-    "# Drop missing values\n",
-    "df_clean = df.dropna()\n",
+    "---\n",
     "\n",
-    "# Check for duplicates\n",
-    "duplicates = df_clean.duplicated().sum()\n",
+    "## 1.4 Business Problem Statement\n",
     "\n",
-    "# Drop duplicates if any\n",
-    "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
+    "- Churn impacts both revenue and brand reputation.\n",
+    "- The cost of acquiring a new customer is significantly higher than retaining an existing one.\n",
+    "- The current challenge is **lack of early warning systems** for customer churn.\n",
     "\n",
-    "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\")\n",
+    "By predicting churn probability, SyriaTel can intervene before losing the customer.\n",
     "\n",
-    "\n"
+    "---\n",
+    "\n",
+    "## 1.5 Project Goals\n",
+    "\n",
+    "- **Build a classification model** using customer data to predict churn risk.\n",
+    "- **Identify key drivers** (features) contributing to churn.\n",
+    "- **Translate data insights into actionable business recommendations.**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.6 Success Metrics\n",
+    "\n",
+    "- **Model Performance:** Achieve an acceptable balance between precision and recall (using classification metrics like F1-score).\n",
+    "- **Business Impact:** Provide insights that SyriaTel’s marketing and customer success teams can implement.\n",
+    "- **Actionable Insights:** Highlight features that are strong predictors of churn to inform business decisions.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.7 Project Scope and Limitations\n",
+    "\n",
+    "- The model will be based on historical customer data available at the time of this project.\n",
+    "- Predictions will be probabilistic — they suggest likelihood, not certainty.\n",
+    "- Results and recommendations are constrained by the quality and depth of the dataset provided.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
