--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1,17 +1,175 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bb55437",
+   "cell_type": "markdown",
+   "id": "b9cb6142",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 1. Business Understanding\n",
+    "\n",
+    "## 1.1 Background\n",
+    "\n",
+    "SyriaTel is one of the largest telecommunications providers in Syria, offering mobile services to a broad range of customers.  \n",
+    "In the highly competitive telecom industry, retaining existing customers is critical for sustaining profitability and market share.  \n",
+    "\n",
+    "However, customer churn — when subscribers discontinue using SyriaTel’s services — poses a significant business challenge.  \n",
+    "Losing customers not only decreases revenue but also increases costs due to the need for acquiring new customers through marketing and promotional efforts.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.2 Business Objective\n",
+    "\n",
+    "The key objective of this project is to develop a **predictive model** that accurately identifies customers likely to churn.  \n",
+    "With such a model, SyriaTel will be able to:\n",
+    "\n",
+    "- Take **proactive retention measures** for high-risk customers  \n",
+    "- Design **targeted marketing campaigns**  \n",
+    "- Improve **customer satisfaction** by addressing key pain points  \n",
+    "\n",
+    "Ultimately, this will help **reduce churn rates**, save on customer acquisition costs, and maximize long-term profitability.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.3 Stakeholders\n",
+    "\n",
+    "| Stakeholder | Interest |\n",
+    "|---|---|\n",
+    "| **Executive Management** | Strategic decisions on customer retention initiatives |\n",
+    "| **Marketing Team** | Design targeted offers and promotions |\n",
+    "| **Customer Service** | Improve customer engagement and support |\n",
+    "| **Data Science Team** | Develop and deploy predictive churn models |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.4 Business Problem Statement\n",
+    "\n",
+    "- Churn impacts both revenue and brand reputation.\n",
+    "- The cost of acquiring a new customer is significantly higher than retaining an existing one.\n",
+    "- The current challenge is **lack of early warning systems** for customer churn.\n",
+    "\n",
+    "By predicting churn probability, SyriaTel can intervene before losing the customer.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.5 Project Goals\n",
+    "\n",
+    "- **Build a classification model** using customer data to predict churn risk.\n",
+    "- **Identify key drivers** (features) contributing to churn.\n",
+    "- **Translate data insights into actionable business recommendations.**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.6 Success Metrics\n",
+    "\n",
+    "- **Model Performance:** Achieve an acceptable balance between precision and recall (using classification metrics like F1-score).\n",
+    "- **Business Impact:** Provide insights that SyriaTel’s marketing and customer success teams can implement.\n",
+    "- **Actionable Insights:** Highlight features that are strong predictors of churn to inform business decisions.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1.7 Project Scope and Limitations\n",
+    "\n",
+    "- The model will be based on historical customer data available at the time of this project.\n",
+    "- Predictions will be probabilistic — they suggest likelihood, not certainty.\n",
+    "- Results and recommendations are constrained by the quality and depth of the dataset provided.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17b15704",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 2. Data Understanding\n",
+    "\n",
+    "## 2.1 Business Context Recap\n",
+    "The objective of this project is to predict customer churn for **SyriaTel**, a telecommunications company.  \n",
+    "Churn refers to customers discontinuing their service, which directly impacts company revenue.  \n",
+    "Understanding the patterns leading to churn helps SyriaTel retain customers through targeted actions.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2.2 Dataset Overview\n",
+    "- The dataset contains records of SyriaTel customers with multiple attributes describing:\n",
+    "  - Demographics (e.g., gender, age group)\n",
+    "  - Account Information (e.g., contract type, payment method)\n",
+    "  - Service Usage Patterns (e.g., data usage, call minutes)\n",
+    "  - Subscription details (e.g., international plan, voicemail plan)\n",
+    "  - Customer status (Churn or Not)\n",
+    "  \n",
+    "---\n",
+    "\n",
+    "## 2.3 Initial Data Checks\n",
+    "- Loaded the dataset successfully.\n",
+    "- Previewed the first few rows to understand the structure.\n",
+    "- Performed a `.info()` check to:\n",
+    "  - Verify data types (numerical, categorical)\n",
+    "  - Check for null or missing values\n",
+    "  - Confirm the size of the dataset\n",
+    "  \n",
+    "---\n",
+    "\n",
+    "## 2.4 Dataset Summary\n",
+    "| Item | Value |\n",
+    "|---|---|\n",
+    "| Number of Rows | *To be filled after `df.shape` output* |\n",
+    "| Number of Columns | *To be filled after `df.shape` output* |\n",
+    "| Target Variable | `Churn` (Binary: Yes/No) |\n",
+    "| Data Types | Numerical, Categorical |\n",
+    "| Missing Values | *Summary from `isnull().sum()`* |\n",
+    "| Duplicates | To be checked in Data Preparation |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2.5 Observations & Considerations\n",
+    "- The dataset contains both numerical and categorical features.\n",
+    "- Class imbalance may be present in the target variable — this will be validated.\n",
+    "- Understanding variable distributions and relationships will guide feature engineering and model selection.\n",
+    "- No immediate anomalies observed in the preview, but a thorough analysis is planned in the EDA phase.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2.6 Next Steps\n",
+    "- Check for duplicates and missing data in **Data Preparation**.\n",
+    "- Explore distributions, correlations, and target class balance in **EDA**.\n",
+    "- Prepare data for machine learning models by encoding, scaling, and splitting.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7364f29f",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
