--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -146,11 +146,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7364f29f",
+   "id": "3ee70462",
    "metadata": {},
    "source": [
-    "\n"
+    "## 3. Data Preparation\n",
+    "---\n",
+    "Data preparation is a critical step in the data science workflow. It ensures that the data is clean, consistent, and properly formatted for modeling. \n",
+    "\n",
+    "\n",
+    "The following processes were applied to prepare the SyriaTel Customer Churn dataset for analysis.\n",
+    "\n",
+    "### 3.1 Handling Duplicates\n",
+    "Duplicate records can introduce bias and distort analysis.  \n",
+    "- Checked the dataset for duplicates.\n",
+    "- Removed any identified duplicate rows.\n",
+    "\n",
+    "```python\n",
+    "duplicates = df.duplicated().sum()\n",
+    "print(f\"Number of duplicate rows: {duplicates}\")\n",
+    "\n",
+    "```\n",
+    "## 3.2 Handling Missing Values\n",
+    "I dropped rows with missing values for this analysis to maintain data integrity.\n",
+    "\n",
+    "```python\n",
+    "df.dropna(inplace=True)\n",
+    "```\n",
+    "\n",
+    "## 3.3 Encoding Categorical Variables\n",
+    "Machine learning models require numerical data. I encoded the target variable Churn using LabelEncoder.\n",
+    "```python\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "df['Churn'] = le.fit_transform(df['Churn'])  # Yes = 1, No = 0\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## 3.4 Feature and Target Separation\n",
+    "I separated the independent variables (X) from the dependent target (y).\n",
+    "```python\n",
+    "X = df.drop('Churn', axis=1)\n",
+    "y = df['Churn']\n",
+    "```\n",
+    "\n",
+    "## 3.5 Train-Test Split with Stratification\n",
+    "To ensure unbiased model evaluation, I split the data into training and testing sets with stratification on the target variable.\n",
+    "```python\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    stratify=y,\n",
+    "    random_state=42\n",
+    ")\n",
+    "```\n",
+    "## 3.6 Data Preparation Summary\n",
+    "- Duplicates removed.\n",
+    "\n",
+    "- Missing values handled.\n",
+    "\n",
+    "- Target variable encoded.\n",
+    "\n",
+    "- Data split into training/testing sets with stratification.\n",
+    "\n",
+    "The data is now clean and ready for Exploratory Data Analysis (EDA).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ef52a1",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
