--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -80,6 +80,58 @@
    "cell_type": "markdown",
    "id": "17b15704",
    "metadata": {},
+   "source": [
+    "## 2. Data Understanding\n",
+    "# Dataset Overview  \n",
+    "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
+    "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
+    "\n",
+    "## Data Source  \n",
+    "- **Dataset Name:** SyriaTel Customer Churn  \n",
+    "- **Target Variable:** `Churn` (Binary — Yes/No)  \n",
+    "- **Data Type:** Tabular (CSV)  \n",
+    "# Importing Libraries and Loading Data\n",
+    "```python\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Settings for better display\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "sns.set(style='whitegrid')\n",
+    "\n",
+    "# Load dataset\n",
+    "data = pd.read_csv('data/SyriaTel_Customer_Churn.csv')\n",
+    "\n",
+    "# Display first few records\n",
+    "data.head()\n",
+    "```\n",
+    "\n",
+    "## 3. Data Preparation\n",
+    "\n",
+    "### Actions Taken:\n",
+    "- Dropped missing values\n",
+    "- Checked duplicates\n",
+    "- Reset index after cleaning\n",
+    "\n",
+    "# Drop missing values\n",
+    "df_clean = df.dropna()\n",
+    "\n",
+    "# Check for duplicates\n",
+    "duplicates = df_clean.duplicated().sum()\n",
+    "\n",
+    "###  Drop duplicates if any\n",
+    "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a7f930",
+   "metadata": {},
    "source": []
   }
  ],
