--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -116,13 +116,13 @@
     "- Checked duplicates\n",
     "- Reset index after cleaning\n",
     "\n",
-    "# Drop missing values\n",
+    "# 3.1 Drop missing values\n",
     "df_clean = df.dropna()\n",
     "\n",
-    "# Check for duplicates\n",
+    "# 3.2 Check for duplicates\n",
     "duplicates = df_clean.duplicated().sum()\n",
     "\n",
-    "###  Drop duplicates if any\n",
+    "# 3.3  Drop duplicates if any\n",
     "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
     "\n",
     "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\""
