--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -125,7 +125,10 @@
     "# 3.3  Drop duplicates if any\n",
     "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
     "\n",
-    "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\""
+    "print(f\"Missing values dropped. Duplicates found and dropped: {duplicates}\"\n",
+    "\n",
+    "# 3.4 Check target variable distribution\n",
+    "df_clean['Churn'].value_counts(normalize=True) * 100\n"
    ]
   },
   {
