Business Understanding section

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -73,150 +73,62 @@
     "- Predictions will be probabilistic — they suggest likelihood, not certainty.\n",
     "- Results and recommendations are constrained by the quality and depth of the dataset provided.\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6130db71",
+   "metadata": {},
+   "source": [
+    "# 2️ Data Understanding\n",
     "\n",
+    "### Dataset Overview:\n",
+    "SyriaTel Customer Churn Dataset — includes demographics, service details, and churn status.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ba6c00",
+   "metadata": {},
+   "source": [
+    "2.1 Load Libraries and Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c362a009",
+   "metadata": {},
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
     "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv('SyriaTel_Customer_Churn.csv')\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Preview the data\n",
+    "df.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17b15704",
+   "id": "acd99d7b",
    "metadata": {},
    "source": [
-    "\n",
-    "# 2. Data Understanding\n",
-    "\n",
-    "## 2.1 Business Context Recap\n",
-    "The objective of this project is to predict customer churn for **SyriaTel**, a telecommunications company.  \n",
-    "Churn refers to customers discontinuing their service, which directly impacts company revenue.  \n",
-    "Understanding the patterns leading to churn helps SyriaTel retain customers through targeted actions.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 2.2 Dataset Overview\n",
-    "- The dataset contains records of SyriaTel customers with multiple attributes describing:\n",
-    "  - Demographics (e.g., gender, age group)\n",
-    "  - Account Information (e.g., contract type, payment method)\n",
-    "  - Service Usage Patterns (e.g., data usage, call minutes)\n",
-    "  - Subscription details (e.g., international plan, voicemail plan)\n",
-    "  - Customer status (Churn or Not)\n",
-    "  \n",
-    "---\n",
-    "\n",
-    "## 2.3 Initial Data Checks\n",
-    "- Loaded the dataset successfully.\n",
-    "- Previewed the first few rows to understand the structure.\n",
-    "- Performed a `.info()` check to:\n",
-    "  - Verify data types (numerical, categorical)\n",
-    "  - Check for null or missing values\n",
-    "  - Confirm the size of the dataset\n",
-    "  \n",
-    "---\n",
-    "\n",
-    "## 2.4 Dataset Summary\n",
-    "| Item | Value |\n",
-    "|---|---|\n",
-    "| Number of Rows | *To be filled after `df.shape` output* |\n",
-    "| Number of Columns | *To be filled after `df.shape` output* |\n",
-    "| Target Variable | `Churn` (Binary: Yes/No) |\n",
-    "| Data Types | Numerical, Categorical |\n",
-    "| Missing Values | *Summary from `isnull().sum()`* |\n",
-    "| Duplicates | To be checked in Data Preparation |\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 2.5 Observations & Considerations\n",
-    "- The dataset contains both numerical and categorical features.\n",
-    "- Class imbalance may be present in the target variable — this will be validated.\n",
-    "- Understanding variable distributions and relationships will guide feature engineering and model selection.\n",
-    "- No immediate anomalies observed in the preview, but a thorough analysis is planned in the EDA phase.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 2.6 Next Steps\n",
-    "- Check for duplicates and missing data in **Data Preparation**.\n",
-    "- Explore distributions, correlations, and target class balance in **EDA**.\n",
-    "- Prepare data for machine learning models by encoding, scaling, and splitting.\n"
+    "2.2 Dataset Info and Data Types"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3ee70462",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e185edac",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 3. Data Preparation\n",
-    "---\n",
-    "Data preparation is a critical step in the data science workflow. It ensures that the data is clean, consistent, and properly formatted for modeling. \n",
-    "\n",
-    "\n",
-    "The following processes were applied to prepare the SyriaTel Customer Churn dataset for analysis.\n",
-    "\n",
-    "### 3.1 Handling Duplicates\n",
-    "Duplicate records can introduce bias and distort analysis.  \n",
-    "- Checked the dataset for duplicates.\n",
-    "- Removed any identified duplicate rows.\n",
-    "\n",
-    "```python\n",
-    "duplicates = df.duplicated().sum()\n",
-    "print(f\"Number of duplicate rows: {duplicates}\")\n",
-    "\n",
-    "```\n",
-    "## 3.2 Handling Missing Values\n",
-    "I dropped rows with missing values for this analysis to maintain data integrity.\n",
-    "\n",
-    "```python\n",
-    "df.dropna(inplace=True)\n",
-    "```\n",
-    "\n",
-    "## 3.3 Encoding Categorical Variables\n",
-    "Machine learning models require numerical data. I encoded the target variable Churn using LabelEncoder.\n",
-    "```python\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()\n",
-    "df['Churn'] = le.fit_transform(df['Churn'])  # Yes = 1, No = 0\n",
-    "```\n",
-    "\n",
-    "\n",
-    "## 3.4 Feature and Target Separation\n",
-    "I separated the independent variables (X) from the dependent target (y).\n",
-    "```python\n",
-    "X = df.drop('Churn', axis=1)\n",
-    "y = df['Churn']\n",
-    "```\n",
-    "\n",
-    "## 3.5 Train-Test Split with Stratification\n",
-    "To ensure unbiased model evaluation, I split the data into training and testing sets with stratification on the target variable.\n",
-    "```python\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y,\n",
-    "    test_size=0.2,\n",
-    "    stratify=y,\n",
-    "    random_state=42\n",
-    ")\n",
-    "```\n",
-    "## 3.6 Data Preparation Summary\n",
-    "- Duplicates removed.\n",
-    "\n",
-    "- Missing values handled.\n",
-    "\n",
-    "- Target variable encoded.\n",
-    "\n",
-    "- Data split into training/testing sets with stratification.\n",
-    "\n",
-    "The data is now clean and ready for Exploratory Data Analysis (EDA).\n"
+    "# Check data info\n",
+    "df.info()\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06ef52a1",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
