added business understanding

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2,132 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9cb6142",
+   "id": "9c581fbe",
    "metadata": {},
    "source": [
-    "# 1. Business Understanding\n",
+    "# Business Understanding\n",
     "\n",
-    "## 1.1 Background\n",
+    "## 1. Background\n",
+    "- In the telecom sector, **customer churn** — when users leave the service — leads to revenue loss and increased costs.\n",
+    "- **SyriaTel**, a key market player, wants to reduce churn through data-driven insights.\n",
     "\n",
-    "SyriaTel is one of the largest telecommunications providers in Syria, offering mobile services to a broad range of customers.  \n",
-    "In the highly competitive telecom industry, retaining existing customers is critical for sustaining profitability and market share.  \n",
+    "## 2. Business Problem\n",
+    "- The company struggles to predict churn and target interventions.\n",
+    "- Without a churn prediction model, SyriaTel risks higher acquisition costs and loss of loyal customers.\n",
     "\n",
-    "However, customer churn — when subscribers discontinue using SyriaTel’s services — poses a significant business challenge.  \n",
-    "Losing customers not only decreases revenue but also increases costs due to the need for acquiring new customers through marketing and promotional efforts.\n",
+    "## 3. Project Objectives\n",
+    "- ✅ Develop a machine learning classification model to predict churn.\n",
+    "- ✅ Identify top factors contributing to customer churn.\n",
+    "- ✅ Support targeted retention strategies based on insights.\n",
     "\n",
-    "---\n",
+    "## 4. Stakeholders & Impact\n",
+    "- **Sales/Marketing:** Design retention offers for at-risk customers.\n",
+    "- **Customer Service:** Enhance service quality for churn-prone clients.\n",
+    "- **Management:** Align churn reduction with growth targets.\n",
     "\n",
-    "## 1.2 Business Objective\n",
-    "\n",
-    "The key objective of this project is to develop a **predictive model** that accurately identifies customers likely to churn.  \n",
-    "With such a model, SyriaTel will be able to:\n",
-    "\n",
-    "- Take **proactive retention measures** for high-risk customers  \n",
-    "- Design **targeted marketing campaigns**  \n",
-    "- Improve **customer satisfaction** by addressing key pain points  \n",
-    "\n",
-    "Ultimately, this will help **reduce churn rates**, save on customer acquisition costs, and maximize long-term profitability.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1.3 Stakeholders\n",
-    "\n",
-    "| Stakeholder | Interest |\n",
-    "|---|---|\n",
-    "| **Executive Management** | Strategic decisions on customer retention initiatives |\n",
-    "| **Marketing Team** | Design targeted offers and promotions |\n",
-    "| **Customer Service** | Improve customer engagement and support |\n",
-    "| **Data Science Team** | Develop and deploy predictive churn models |\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1.4 Business Problem Statement\n",
-    "\n",
-    "- Churn impacts both revenue and brand reputation.\n",
-    "- The cost of acquiring a new customer is significantly higher than retaining an existing one.\n",
-    "- The current challenge is **lack of early warning systems** for customer churn.\n",
-    "\n",
-    "By predicting churn probability, SyriaTel can intervene before losing the customer.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1.5 Project Goals\n",
-    "\n",
-    "- **Build a classification model** using customer data to predict churn risk.\n",
-    "- **Identify key drivers** (features) contributing to churn.\n",
-    "- **Translate data insights into actionable business recommendations.**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1.6 Success Metrics\n",
-    "\n",
-    "- **Model Performance:** Achieve an acceptable balance between precision and recall (using classification metrics like F1-score).\n",
-    "- **Business Impact:** Provide insights that SyriaTel’s marketing and customer success teams can implement.\n",
-    "- **Actionable Insights:** Highlight features that are strong predictors of churn to inform business decisions.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1.7 Project Scope and Limitations\n",
-    "\n",
-    "- The model will be based on historical customer data available at the time of this project.\n",
-    "- Predictions will be probabilistic — they suggest likelihood, not certainty.\n",
-    "- Results and recommendations are constrained by the quality and depth of the dataset provided.\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6130db71",
-   "metadata": {},
-   "source": [
-    "# 2️ Data Understanding\n",
-    "\n",
-    "### Dataset Overview:\n",
-    "SyriaTel Customer Churn Dataset — includes demographics, service details, and churn status.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22ba6c00",
-   "metadata": {},
-   "source": [
-    "2.1 Load Libraries and Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c362a009",
-   "metadata": {},
-   "source": [
-    "# Import libraries\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Load dataset\n",
-    "df = pd.read_csv('SyriaTel_Customer_Churn.csv')\n",
-    "\n",
-    "# Preview the data\n",
-    "df.head()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acd99d7b",
-   "metadata": {},
-   "source": [
-    "2.2 Dataset Info and Data Types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e185edac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check data info\n",
-    "df.info()\n"
+    "## 5. Success Criteria\n",
+    "- Reliable model performance (focus on recall/precision).\n",
+    "- Clear, actionable insights on churn drivers.\n",
+    "- Practical recommendations for reducing churn.\n"
    ]
   }
  ],
@@ -138,15 +39,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
