--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -28,7 +28,8 @@
     "## 5. Success Criteria\n",
     "- Reliable model performance (focus on recall/precision).\n",
     "- Clear, actionable insights on churn drivers.\n",
-    "- Practical recommendations for reducing churn.\n"
+    "- Practical recommendations for reducing churn.\n",
+    "\n"
    ]
   }
  ],
