--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -80,7 +80,11 @@
    "cell_type": "markdown",
    "id": "20a7f930",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2. Data Understanding Tasks (We’ll commit after every 1-2 steps):\n",
+    "\n",
+    "2.1 Load and Preview Dataset"
+   ]
   }
  ],
  "metadata": {
