--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -85,6 +85,23 @@
     "\n",
     "2.1 Load and Preview Dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3b0f49ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing Libraries and Loading Data\n",
+    "\n",
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
