loading data set

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -81,21 +81,22 @@
    "id": "20a7f930",
    "metadata": {},
    "source": [
-    "## 2. Data Understanding Tasks (We’ll commit after every 1-2 steps):\n",
+    "## 2. Data Understanding.\n",
+    "### Dataset Overview  \n",
+    "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
+    "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
     "\n",
     "2.1 Load and Preview Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3b0f49ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing Libraries and Loading Data\n",
-    "\n",
-    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
