dataset shape and columns

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -86,7 +86,7 @@
     "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
     "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
     "\n",
-    "2.1 Load and Preview Dataset"
+    "2.1 Importing Libraries "
    ]
   },
   {
@@ -96,12 +96,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing Libraries and Loading Data\n",
+    "# Importing Libraries \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b07f1c",
+   "metadata": {},
+   "source": [
+    "## 2.2 Loading and Preview Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "69ddc1da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/bigml_59c28831336c6604c800002a.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2985d125",
+   "metadata": {},
+   "source": [
+    "## 2.3 Check Dataset Shape & Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b286541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Shape: (3333, 21)\n",
+      "\n",
+      "Columns:\n",
+      " ['state', 'account length', 'area code', 'phone number', 'international plan', 'voice mail plan', 'number vmail messages', 'total day minutes', 'total day calls', 'total day charge', 'total eve minutes', 'total eve calls', 'total eve charge', 'total night minutes', 'total night calls', 'total night charge', 'total intl minutes', 'total intl calls', 'total intl charge', 'customer service calls', 'churn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f\"Dataset Shape: {df.shape}\")\n",
+    "print(\"\\nColumns:\\n\", df.columns.tolist())\n"
    ]
   }
  ],
