checking null values

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -152,6 +152,26 @@
     "print(f\"Dataset Shape: {df.shape}\")\n",
     "print(\"\\nColumns:\\n\", df.columns.tolist())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19da5550",
+   "metadata": {},
+   "source": [
+    "## 2.3 Checking Data Types and Null values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6613eec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df.info()\n",
+    "df.isnull().sum()\n"
+   ]
   }
  ],
  "metadata": {
