checking unique columns

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -510,6 +510,59 @@
     "\n",
     "df.describe()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e646a225",
+   "metadata": {},
+   "source": [
+    "## 2.6 Check Unique Values per Column\n",
+    "This helps spot categorical columns and potential ID columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "12766fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "churn                        2\n",
+       "international plan           2\n",
+       "voice mail plan              2\n",
+       "area code                    3\n",
+       "customer service calls      10\n",
+       "total intl calls            21\n",
+       "number vmail messages       46\n",
+       "state                       51\n",
+       "total day calls            119\n",
+       "total night calls          120\n",
+       "total eve calls            123\n",
+       "total intl minutes         162\n",
+       "total intl charge          162\n",
+       "account length             212\n",
+       "total night charge         933\n",
+       "total eve charge          1440\n",
+       "total night minutes       1591\n",
+       "total eve minutes         1611\n",
+       "total day charge          1667\n",
+       "total day minutes         1667\n",
+       "phone number              3333\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6️⃣ Check unique values for all columns\n",
+    "df.nunique().sort_values()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
