checking for duplicates

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -86,17 +86,17 @@
     "The dataset contains historical customer information from SyriaTel, including demographics, account information, usage patterns, and churn status.  \n",
     "Our goal in this phase is to understand the structure of the data, inspect column details, assess data quality, and identify potential issues for cleaning and preparation.\n",
     "\n",
-    "2.1 Importing Libraries "
+    "## 2.1 Importing Libraries "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3b0f49ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing Libraries \n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -561,6 +561,34 @@
    "source": [
     "# 6️⃣ Check unique values for all columns\n",
     "df.nunique().sort_values()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee648e2",
+   "metadata": {},
+   "source": [
+    "## 2.7 Checking for Duplicate Records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4567c17e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate Rows: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f\"Duplicate Rows: {df.duplicated().sum()}\")\n",
     "\n"
    ]
   }
