--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -591,6 +591,19 @@
     "print(f\"Duplicate Rows: {df.duplicated().sum()}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2766b4c6",
+   "metadata": {},
+   "source": [
+    "## 2.8 Initial Observations.\n",
+    "\n",
+    "- No critical missing values / Missing values in XYZ.\n",
+    "- Data types are a mix of numerical and categorical.\n",
+    "- Target variable is `Churn` (Binary).\n",
+    "- Will explore further during EDA.\n"
+   ]
   }
  ],
  "metadata": {
