--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -604,6 +604,15 @@
     "- Target variable is `Churn` (Binary).\n",
     "- Will explore further during EDA.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "677d1f91",
+   "metadata": {},
+   "source": [
+    "## 3. Data Preparation Tasks\n",
+    "We’ll handle missing values, encode categorical variables, and prepare the data for modeling."
+   ]
   }
  ],
  "metadata": {
