--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -611,7 +611,196 @@
    "metadata": {},
    "source": [
     "## 3. Data Preparation Tasks\n",
-    "We’ll handle missing values, encode categorical variables, and prepare the data for modeling."
+    "We’ll handle missing values, encode categorical variables, and prepare the data for modeling.\n",
+    "### Objective  \n",
+    "To clean, transform, and prepare the dataset for effective modeling.  \n",
+    "This involves handling missing values, encoding categorical variables, and scaling numerical features.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2e1f247",
+   "metadata": {},
+   "source": [
+    "## 3.1 Drop Unnecessary Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0ad3d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df.drop(columns=['customerID'], inplace=True, errors='ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57646f99",
+   "metadata": {},
+   "source": [
+    "## 3.2 Handle Missing Values\n",
+    "Will Check missing values again before handling and For simplicity, drop rows with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258c3c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check missing values again before handling\n",
+    "df.isnull().sum()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b15338b7",
+   "metadata": {},
+   "source": [
+    "## 3.2.a Checking missing value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0114583e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state                     0\n",
+       "account length            0\n",
+       "area code                 0\n",
+       "phone number              0\n",
+       "international plan        0\n",
+       "voice mail plan           0\n",
+       "number vmail messages     0\n",
+       "total day minutes         0\n",
+       "total day calls           0\n",
+       "total day charge          0\n",
+       "total eve minutes         0\n",
+       "total eve calls           0\n",
+       "total eve charge          0\n",
+       "total night minutes       0\n",
+       "total night calls         0\n",
+       "total night charge        0\n",
+       "total intl minutes        0\n",
+       "total intl calls          0\n",
+       "total intl charge         0\n",
+       "customer service calls    0\n",
+       "churn                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3350dad4",
+   "metadata": {},
+   "source": [
+    "## 3.2.b For simplicity, drop rows with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f35dfc10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.dropna().copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a91dc683",
+   "metadata": {},
+   "source": [
+    "## 3.3 Encode Categorical Variables\n",
+    "We’ll use LabelEncoder for binary columns and OneHotEncoder for others."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeacede3",
+   "metadata": {},
+   "source": [
+    "### Identifying categorical columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "23770c60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['state', 'account length', 'area code', 'phone number', 'international plan', 'voice mail plan', 'number vmail messages', 'total day minutes', 'total day calls', 'total day charge', 'total eve minutes', 'total eve calls', 'total eve charge', 'total night minutes', 'total night calls', 'total night charge', 'total intl minutes', 'total intl calls', 'total intl charge', 'customer service calls', 'churn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_clean.columns.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26a3accb",
+   "metadata": {},
+   "source": [
+    "### Label Encoding for 'Churn' target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ee7632b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "df_clean['churn'] = le.fit_transform(df_clean['churn'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "924152f6",
+   "metadata": {},
+   "source": [
+    "### One-hot encode multi-category columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9f695e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_encoded = pd.get_dummies(df_clean, drop_first=True)"
    ]
   }
  ],
