train test split

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -789,7 +789,7 @@
    "id": "924152f6",
    "metadata": {},
    "source": [
-    "### One-hot encode multi-category columns"
+    "### 3.4 One-hot encode multi-category columns"
    ]
   },
   {
@@ -801,6 +801,29 @@
    "source": [
     "\n",
     "df_encoded = pd.get_dummies(df_clean, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554e0bff",
+   "metadata": {},
+   "source": [
+    "### 3.5 Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8e5c3acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = df_encoded.drop('churn', axis=1)\n",
+    "y = df_encoded['churn']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n"
    ]
   }
  ],
