--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -610,7 +610,7 @@
    "id": "677d1f91",
    "metadata": {},
    "source": [
-    "## 3. Data Preparation Tasks\n",
+    "# 3. Data Preparation Tasks\n",
     "We’ll handle missing values, encode categorical variables, and prepare the data for modeling.\n",
     "### Objective  \n",
     "To clean, transform, and prepare the dataset for effective modeling.  \n",
@@ -824,6 +824,39 @@
     "y = df_encoded['churn']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431f0b81",
+   "metadata": {},
+   "source": [
+    "# 4.EDA (Exploratory Data Analysis)\n",
+    "We’ll check correlations, feature distributions, and relationships with churn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cff6ca95",
+   "metadata": {},
+   "source": [
+    "## 4.1 Correlation Heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acf01f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "sns.heatmap(df_encoded.corr(), cmap='coolwarm', annot=False)\n",
+    "plt.title('Feature Correlation Heatmap')\n",
+    "plt.show()\n"
    ]
   }
  ],
