--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -925,7 +925,7 @@
    "id": "0d54a200",
    "metadata": {},
    "source": [
-    "## 4.3 Visualize Feature Distributions"
+    "## 4.3 Visualization Feature Distributions"
    ]
   },
   {
@@ -981,7 +981,7 @@
    "id": "2ef32c5e",
    "metadata": {},
    "source": [
-    "## 4.4 Visualize Categorical Variables vs Churn "
+    "## 4.4 Visualization of  international plan vs churn "
    ]
   },
   {
