--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "3b0f49ee",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "69ddc1da",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0b286541",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "12766fca",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4567c17e",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c0ad3d3b",
    "metadata": {},
    "outputs": [],
@@ -647,10 +647,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "258c3c4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state                     0\n",
+       "account length            0\n",
+       "area code                 0\n",
+       "phone number              0\n",
+       "international plan        0\n",
+       "voice mail plan           0\n",
+       "number vmail messages     0\n",
+       "total day minutes         0\n",
+       "total day calls           0\n",
+       "total day charge          0\n",
+       "total eve minutes         0\n",
+       "total eve calls           0\n",
+       "total eve charge          0\n",
+       "total night minutes       0\n",
+       "total night calls         0\n",
+       "total night charge        0\n",
+       "total intl minutes        0\n",
+       "total intl calls          0\n",
+       "total intl charge         0\n",
+       "customer service calls    0\n",
+       "churn                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check missing values again before handling\n",
     "df.isnull().sum()\n",
@@ -668,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "0114583e",
    "metadata": {},
    "outputs": [
@@ -699,7 +731,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "f35dfc10",
    "metadata": {},
    "outputs": [],
@@ -745,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "23770c60",
    "metadata": {},
    "outputs": [
@@ -771,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8ee7632b",
    "metadata": {},
    "outputs": [],
@@ -794,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5c9f695e",
    "metadata": {},
    "outputs": [],
@@ -813,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "8e5c3acf",
    "metadata": {},
    "outputs": [],
@@ -845,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "id": "3acf01f2",
    "metadata": {},
    "outputs": [
@@ -880,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "1e1718b9",
    "metadata": {},
    "outputs": [
@@ -930,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "d76a42a9",
    "metadata": {},
    "outputs": [
@@ -953,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "7bf9feb9",
    "metadata": {},
    "outputs": [
@@ -986,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "7c2a6c57",
    "metadata": {},
    "outputs": [
@@ -1006,6 +1038,32 @@
     "plt.title('international plan vs churn')\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce68fe2a",
+   "metadata": {},
+   "source": [
+    "## 5️. Statistical Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1d6a054",
+   "metadata": {},
+   "source": [
+    "### 5. 1️. Descriptive Statistics Summary\n",
+    "### Objective:\n",
+    "\n",
+    "The purpose of this section is to statistically validate whether the observed patterns in the data are significant or could have occurred by random chance.\n",
+    "\n",
+    "\n",
+    "We will perform:\n",
+    "\n",
+    "-Chi-Square Tests for categorical variables\n",
+    "\n",
+    "-Independent Samples T-Tests for numerical variables"
    ]
   }
  ],
