chi square independence

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1053,17 +1053,39 @@
    "id": "a1d6a054",
    "metadata": {},
    "source": [
-    "### 5. 1️. Descriptive Statistics Summary\n",
-    "### Objective:\n",
+    "### 5.1 Descriptive Statistics Summary  \n",
     "\n",
+    "**Objective:**  \n",
     "The purpose of this section is to statistically validate whether the observed patterns in the data are significant or could have occurred by random chance.\n",
     "\n",
     "\n",
-    "We will perform:\n",
     "\n",
-    "-Chi-Square Tests for categorical variables\n",
+    "We will perform:  \n",
+    "- **Chi-Square Tests** for categorical variables  \n",
+    "- **Independent Samples T-Tests** for numerical variables\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17c00f6",
+   "metadata": {},
+   "source": [
+    "## 5.2 Chi-Square Test of Independence (For Categorical Variables)\n",
     "\n",
-    "-Independent Samples T-Tests for numerical variables"
+    "**1. What is the Chi-Square Test?**  \n",
+    "The Chi-Square Test of Independence checks whether two categorical variables are related or independent of each other.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**2. Hypotheses:**  \n",
+    "- **Null Hypothesis (H₀):** The categorical variable is independent of churn — *No association.*  \n",
+    "- **Alternative Hypothesis (H₁):** The categorical variable is dependent on churn — *Significant association exists.*\n",
+    "\n",
+    "\n",
+    "\n",
+    "**3. Assumptions:**  \n",
+    "- Both variables are categorical.  \n",
+    "- Observations are independent.\n"
    ]
   }
  ],
