chi test function

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1087,6 +1087,70 @@
     "- Both variables are categorical.  \n",
     "- Observations are independent.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc2c5f04",
+   "metadata": {},
+   "source": [
+    "Chi-Square Test Function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "728f0f94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "def chi_square_test(col_name):\n",
+    "    contingency = pd.crosstab(df_clean[col_name], df_clean['churn'])\n",
+    "    chi2, p, dof, expected = chi2_contingency(contingency)\n",
+    "    print(f\"Chi-Square Test ➔ {col_name} vs Churn\")\n",
+    "    print(f\"p-value: {p:.4f}\")\n",
+    "    if p < 0.05:\n",
+    "        print(\" POSITIVE Result: Significant association with Churn\\n\")\n",
+    "    else:\n",
+    "        print(\" NEGATIVE Result: No significant association with Churn\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "197cb650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-Square Test ➔ state vs Churn\n",
+      "p-value: 0.0023\n",
+      " POSITIVE Result: Significant association with Churn\n",
+      "\n",
+      "Chi-Square Test ➔ area code vs Churn\n",
+      "p-value: 0.9151\n",
+      " NEGATIVE Result: No significant association with Churn\n",
+      "\n",
+      "Chi-Square Test ➔ international plan vs Churn\n",
+      "p-value: 0.0000\n",
+      " POSITIVE Result: Significant association with Churn\n",
+      "\n",
+      "Chi-Square Test ➔ voice mail plan vs Churn\n",
+      "p-value: 0.0000\n",
+      " POSITIVE Result: Significant association with Churn\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi_square_test('state')\n",
+    "chi_square_test('area code')\n",
+    "chi_square_test('international plan')\n",
+    "chi_square_test('voice mail plan')"
+   ]
   }
  ],
  "metadata": {
